--- a/Lesson04/css/medium.css
+++ b/Lesson04/css/medium.css
@@ -14,11 +14,9 @@
         border: none;
         font-size: 1.1rem;
     }
+    header :nth-child(1) aside{font-size: 0.8rem;}
 }
 
 @media (min-width: 450px){
     header img{max-width: 100px;}
 }
-
-
-
