--- a/Lesson04/css/small.css
+++ b/Lesson04/css/small.css
@@ -27,7 +27,7 @@ main{
 }
 nav {
 	background-color: #7F889F;
-	text-align: center;
+	text-align: left;
     box-shadow: 0 2px 12px rgb(92, 88, 88);
     border-radius: 3px;
     width: 100%;
@@ -41,6 +41,10 @@ header nav ul li a{
     padding: 0.4rem;
     text-decoration: none;
     font-size: 1.3rem;
+    border-bottom: 1px solid rgba(0,0,0,0.2);
+}
+header nav ul li a :nth-child(1){
+    border-top: 1px solid rgba(0,0,0,0.2);
 }
 h1{
     font-size: 1.3rem;
@@ -50,6 +54,7 @@ h1{
 header :nth-child(1) aside{
     display: block;
     text-align: end;
+    font-size: 0.6rem;
 }
 header nav ul li a:hover{background-color: #4962a5;}
 header nav button{
@@ -58,7 +63,9 @@ header nav button{
     border: none;
     font-size: 2rem;
     color: #fff;
+    
 }
+
 header nav ul {display: none;}
 header nav ul.open {display: block;}
 
@@ -66,7 +73,6 @@ header nav ul.open {display: block;}
 #hamburgerBtn span:nth-child(2){display: none;}
 #hamburgerBtn.open span:nth-child(1){display: none;}
 #hamburgerBtn.open span:nth-child(2){display: block;}
-
 
 
 
