--- a/Lesson04/css/large.css
+++ b/Lesson04/css/large.css
@@ -1,14 +1,14 @@
 /* large size */
-@media (min-width: 615px){
+@media (min-width: 620px){
     h1{font-size: 2.5rem;}   
     h2{font-size: 1.5rem;} 
     h3{font-size: 1.2rem;} 
-    header nav ul li a{font-size: 1.6rem;    }
+    header nav ul li a{font-size: 1.5rem;    }
     footer{font-size: 1.4rem;}
-    header img{max-width: 100%;}
+    header div.company-name img{max-width: 100%;}
     nav ul{display: flex;}
     nav ul li{flex: 1 1 auto;}
-    nav button {display: none;}
+    header nav #hamburgerBtn {display: none;}
     nav ul#primaryNav{display: flex;} 
     header :nth-child(1) aside{font-size: 1rem;}
 }
