--- a/Lesson04/css/large.css
+++ b/Lesson04/css/large.css
@@ -11,4 +11,15 @@
     header nav #hamburgerBtn {display: none;}
     nav ul#primaryNav{display: flex;} 
     header :nth-child(1) aside{font-size: 1rem;}
+
+
+
+    .main-grid{
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-areas:
+        "event hero hero spotlights"
+        "weather hero hero spotlights"
+        "join news news spotlights";
+    }
 }
