--- a/Lesson04/css/medium.css
+++ b/Lesson04/css/medium.css
@@ -15,6 +15,12 @@
         font-size: 1.1rem;
     }
     header :nth-child(1) aside{font-size: 0.8rem;}
+
+
+    .main-grid {
+        display: flex;
+        flex-direction: column;
+    }
 }
 
 @media (min-width: 450px){
