--- a/Lesson04/css/medium.css
+++ b/Lesson04/css/medium.css
@@ -15,13 +15,37 @@
         font-size: 1.1rem;
     }
     header :nth-child(1) aside{font-size: 0.8rem;}
-
-
-    .main-grid {
-        display: flex;
-        flex-direction: column;
+    #join{display: block;}
+    .main-grid{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-areas:
+        "hero hero hero"
+        "news-release news-release news-release"
+        "spotlights spotlights spotlights"
+        "join  join join"
+        "event event weather";
     }
-}
+    .main-grid #spotlights{
+        display: flex;
+    }
+    .main-grid #spotlights section{flex: 1;}
+
+    .address p{
+        font-size: 0.6rem;
+    }
+    .address h2{font-size: 1.2rem;}
+    div.contact p{
+        font-size: 0.7rem;
+    }
+    .f-wrapper img{
+        max-height: 60px;}
+    .f-wrapper{
+        display: flex;
+        justify-content: space-between;
+        height: 6rem;
+    }
+    }
 
 @media (min-width: 450px){
     header div.company-name img{max-width: 100px;}
