--- a/Lesson04/css/small.css
+++ b/Lesson04/css/small.css
@@ -98,26 +98,65 @@ header nav ul.open {display: block;}
 
 main section, main section section{
     border: 1px solid rgba(0,0,0,0.2);
-    margin-top: 0.5rem;
+    margin: 0.5rem;
     min-height: 5rem;
+
 }
-.main-grid {
+/* .main-grid {
     display: flex;
     flex-direction: column;
+} */
+
+.main-grid{
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-areas:
+    "hero"
+    "event"
+    "weather"
+    "news-release"
+    "spotlights";
 }
 
+#hero{grid-area: hero;}
+#news-release{grid-area: news-release;}
+#spotlights{grid-area: spotlights;}
+#join{display: none;}
+#join{grid-area: join;}
+#event{grid-area: event;}
+#weather{grid-area: weather;}
 
-#spotlights section{
-    max-width: 5rem;
+
+footer{
+    margin-top: 1rem;
 }
+.f-wrapper{
+    display: block;
+    height: 13rem;
+    background-color: #7F889F;
+    border: 2px solid #4962a5;
+    border-radius: 5px 0px 0px 5px;
+    border-bottom: none;
+}
+footer div.copyright{
+    background-color: #7F889F;
+    border: 2px solid #4962a5;
+    border-top:none;
+}
+.address{border-bottom: 2px solid #314781;}
+.address p{
+    font-size: 0.8rem;
+}
+div.contact{
+    
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 
-
-
-
-footer{margin-top: 1rem;}
-
-
-
+}
+div.contact p{
+    font-size: 1rem;
+}
 
 
 
