--- a/Lesson04/css/medium.css
+++ b/Lesson04/css/medium.css
@@ -45,6 +45,9 @@
         justify-content: space-between;
         height: 6rem;
     }
+    div.contact p{
+        font-size: 1rem;
+    }
     }
 
 @media (min-width: 450px){
