--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -114,10 +114,7 @@ main section, main section section{
     min-height: 5rem;
 
 }
-/* .main-grid {
-    display: flex;
-    flex-direction: column;
-} */
+/* .main-grid */
 
 .main-grid{
     display: grid;
@@ -130,13 +127,84 @@ main section, main section section{
     "spotlights";
 }
 
-#hero{grid-area: hero;}
+main section{
+    margin: 2px;
+    padding: 0px;
+    border: 0px;
+    background-color: rgba(73, 98, 165,0.3);
+    border-radius: 3px;
+}
+section> h3{
+    font-family: 'Titillium Web', sans-serif;
+    font-size: 1.2rem;
+    margin-top: 1rem;
+}
+section> p{
+    font-size: 0.9rem;
+    font-family:'Source Sans Pro', sans-serif ;
+}
+#hero{
+    grid-area: hero;
+    display: flex;
+    justify-content: center;
+    position: relative;
+    }
+#hero h2{
+    position: absolute;
+    margin-top: 1.5rem;
+}
+#hero img{
+    max-width: 100%;
+}
+#join{
+    position: relative;
+}
+.button-join{
+    position: absolute;
+    width: 7rem;
+    height: 2rem;
+    font-weight: 900;
+    background-color: #fcca73;
+    border-radius: 0.8rem;
+    border: 1px solid;
+    box-shadow: 0px 0px 30px #333;
+}
+#hero-sec-button{
+    bottom: 20px;
+    right: 10px;
+}
+#join{
+    height: 10rem;
+}
+#join p {
+    margin-top: 0.5rem;
+    padding: 1rem;
+}
+#join-sec-button{
+    bottom: 10px;
+    right: 10px;
+}
+
+
+#news-release p{
+    padding: 0.6rem;
+    margin-top: 0.1rem;
+}
+
+
 #news-release{grid-area: news-release;}
 #spotlights{grid-area: spotlights;}
 #join{display: none;}
 #join{grid-area: join;}
 #event{grid-area: event;}
 #weather{grid-area: weather;}
+
+
+
+
+
+/*   footer */
+
 
 
 footer{
