--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -1,5 +1,5 @@
 /* medium size */
-@media (min-width: 360px){
+@media (min-width: 23em){
     #join-us-banner{
         text-align: center ;
         font-size: 0.9rem;
@@ -31,22 +31,34 @@
     }
     .main-grid #spotlights section{flex: 1;}
     
+
+    /*********  WEATHER SECTION *********/
+    #weather div#centered img{max-width: 2.5rem;}
+    #weather div#centered h2{
+        margin-left: 0.5rem;}
+    #weather #weather-data div{
+        font-size: 0.7rem;
+        margin: 0 0 0.4rem 1rem;
+    }
+
+
     div.address p{
         font-size: 0.6rem;
     }
     div.address h2{font-size: 1.3rem;}
+    div.address p{font-size: 0.9rem;}
     div.contact p{
-        font-size: 0.7rem;
+        font-size: 0.8rem;
     }
     .f-wrapper img{
-        max-height: 60px;}
+        max-height: 40px;}
     .f-wrapper{
         display: flex;
         justify-content: space-between;
-        height: 6rem;
+        height: 10rem;
     }
     div.contact p{
-        font-size: 1rem;
+        font-size: 0.8rem;
     }
 
     footer{font-size: 1.2rem;}
@@ -54,10 +66,10 @@
     nav ul li{flex: 1 1 auto;}
     nav button {display: none;}
     nav ul#primaryNav{display: flex;}  */
-
-
     }
 
 @media (min-width: 450px){
     header div.company-name img{max-width: 100px;}
+    .f-wrapper img{
+        max-height: 60px;}
 }
