--- a/Lesson07/css/style.css
+++ b/Lesson07/css/style.css
@@ -2,18 +2,22 @@
 h1, p{
     text-align: center;
 }
-picture{
+main{
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 1.5rem;
+    gap: 1.5rem;
 }
-
+img[data-src] {
+    filter: blur(0.2em);
+}
 img{
-    width: 300px;
+    /* width: 300px;
     height: 400px;
-    border: 1px solid #000;
-    margin: 5px 0 10px 10px;
-    
+    border: 1px solid #000; */
+    filter: blur(0em);
+    transition: filter 1.0s;
 }
 
 
