--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -66,7 +66,34 @@
     nav ul li{flex: 1 1 auto;}
     nav button {display: none;}
     nav ul#primaryNav{display: flex;}  */
+
+    .opa:hover{
+        opacity: 60%;
+        }
+
+    .b-round:hover{
+        border-radius: 30px 50px 180px 220px;
     }
+    .blur:hover{
+        filter: blur(1px) grayscale(75%);
+        border-radius: 80px 80px 80px 80px;
+    }
+
+    .trans:hover{
+        border-radius: 100px; 
+        width: 60%;
+        margin: 0 3em .5em 0;
+        float:left;
+        shape-outside: circle();
+    }
+    .b-shadow:hover{
+        box-shadow: 0 0 50px #ffff00;
+    }
+}       
+
+
+
+
 
 @media (min-width: 450px){
     header div.company-name img{max-width: 100px;}
