--- a/Lesson08/css/style.css
+++ b/Lesson08/css/style.css
@@ -45,8 +45,7 @@ td{
     text-align: center;
     border: 1px solid rgb(160, 160, 160);
 }
-
-.strong{
+td:hover{
     background-color: #628ca6;
     color: white;
 }
