--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -171,6 +171,11 @@ section> p{
     border: 1px solid;
     box-shadow: 0px 0px 30px #333;
     padding: 0 1.5rem ;
+    padding-top: .1rem;
+    text-decoration: none;
+}
+.button-join:visited{
+    color: #000;
 }
 #hero-sec-button{
     bottom: 20px;
@@ -231,18 +236,77 @@ div#centered h2{
 
 /*   footer */
 
-/*     join us     */
+/*     join us form    */
+form fieldset{
+    margin: 2rem 0;
+    border: 1px solid #445ba9;
+    border-radius: 10px;
+    padding: .5rem 2%;
+}
+form legend{
+    color:#445ba9;
+    font-weight: 800;
+    margin-left: 1rem;
+    text-align: left;
+    padding: 0 .5rem;
+}
+label.lbl{
+    display:block;
+    padding-top: .8rem;
+    font-weight: 600;
+    text-align: left;
+}
+form label.lbl input, form label.lbl textarea{
+    display: block;
+    font-size: 1rem;
+    border-radius: 4px;
+    border: 1px solid #999;
+    padding: .75rem;
+    width: 100%;
+    max-width: 20rem;
+    background-color: #fcca73;
+}
+form label.radio{
+    display: block;
+    padding: .75rem 0;
+    text-align: left;
+    font-weight: 600;
+}
+form label.lbl input:required {
+    border-left: solid 6px red;  
+}
+form label.lbl input:required:valid{
+    border-left: solid 6px green;  
+}
+form label.lbl-desc input{
+    padding: 3rem;
+}
 #form-join{
     max-width: 29rem;
     margin: auto;
     margin-bottom: 2rem;
+    align-items: center;
 }
 #sec-join{
     min-height: 8rem;
     margin-bottom: 4rem;
 }
+.button-join-join-pg{
+    margin: 3rem 0;
+    position:relative;
+    padding: 0 5% 0 5%;
+}
 
-
+.tks-sec{
+    margin-top: 1rem;
+    align-items: center;
+    padding: 5rem 0;
+}
+label.tks-join{
+    font-size: 40px;
+    margin-top: 2rem;
+    color: #4962a5;
+}
 /*                  */ 
 
 footer{
