--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -66,7 +66,9 @@
     nav ul li{flex: 1 1 auto;}
     nav button {display: none;}
     nav ul#primaryNav{display: flex;}  */
-
+    .f-wrapper div{
+        width: 33.3%;
+    }
     .opa:hover{
         opacity: 60%;
         }
@@ -97,7 +99,6 @@
         padding: .3rem;
     }
 
-
 }       
 
 
@@ -108,4 +109,21 @@
     header div.company-name img{max-width: 100px;}
     .f-wrapper img{
         max-height: 60px;}
+
+    .list section{
+        flex-direction: row;
+        min-height: 3rem;
+    }
+    .list section div{
+        width: 35%;
+        margin-left: 0.5rem;
+    }
+    .list section p{
+        width: 15%;
+        margin: 0;
+    }
+    .list section a{
+        width: 35%;
+        margin: 0;
+    }
 }
