--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -223,6 +223,14 @@ div#centered{
     margin: 1rem 0 0 0 ;}
 div#centered h2{
     margin-left: 2rem;}
+#cf{
+    margin-left: 0.5rem;
+    font-size: 10px;
+    border-radius: 5px;
+    border: solid 1px #000;
+    padding: 2px 2px ;
+}
+
 #weather-desc {
     font-weight: 600;
     margin: 1rem;
