--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -469,7 +469,39 @@ div.contact p{
     background-color: #ccc;
 }
 
+#contact{
+    display: flex;
+    flex-direction: column;
+    margin-top: 1rem;
+}
 
+#contact-form{
+    flex: 2;
+    max-width: 100%;
+    /* background-color: #00ff2a; */
+    margin-right: 0.2rem;
+}
+#contact-form h2{
+    margin: 5% 0 5% 5%; 
+
+}
+#contact-us{
+    min-width: 100%;
+    border-top: solid 2px rgb(73, 98, 165);
+    text-align: left;
+    padding-bottom: 2rem;
+}
+#contact-us p{
+    margin-left: 15%;
+}
+#contact-us h2{
+    margin: 5% 0 5% 5%; 
+
+}
+
+#contact-us h3{
+    margin-left: 10%;
+}
 
 
 
