--- a/Final Project/css/small.css
+++ b/Final Project/css/small.css
@@ -1,3 +1,11 @@
+
+:root {
+    /* change the values below to your colors from your palette */
+    --primary-color: #2f4858;
+    --secondary-color: #fef19a;
+    --bg-color: #bbe6e4;
+    --txt-color: #f28969;
+}
 * {
     box-sizing: border-box;
     margin: 0;
@@ -6,52 +14,55 @@
 body{
     font-size: 16px;
     line-height: 1.5;
-    background-color: bisque;
-    font-family:'Source Sans Pro', sans-serif ;
+    background-color: var(--bg-color);
+    font-family:'Ubuntu', 'Source Sans Pro', sans-serif ;
+}
+
+aside{
+    display:none;
+}
+h1,h2,h3,h4{
+    font-family: 'Nunito', 'Source Sans Pro';
+}
+h1{
+    font-size: 1.3rem;
+    max-width: 80%;
+    display: inline-block;
+    text-align: center;
+    margin-bottom: 0;
 }
 header, main, footer{
     margin: auto;
     max-width: 1080px;
     min-width: 260px;
-    background-color:bisque;
     text-align: center;
 }
 
-#join-us-banner{
-    text-align: center ;
-    font-family: 'Titillium Web', sans-serif;
-    font-size: 0.7rem;
-    color: #4962A5;
-    background-color: #fcca73;
-    display: none;
-}
-.company-name{
-    position: relative;
-}
-header div.company-name img{
+/* .company-name {
+    background-color: #bbe6e4;
+} */
+.company-name img {
     display:flex;
     position:absolute;
     top: 1px;
-    max-width: 50px;
-    margin-top: 0.5rem;
+    margin-top: 10px;
+    max-height: 30px;
+
 }
-main{
-    display: block;
-}
+
 nav {
-	background-color: #7F889F;
+	background-color: var(--secondary-color);
 	text-align: left;
     box-shadow: 0 2px 12px rgb(92, 88, 88);
-    border-radius: 3px;
+    
     width: 100%;
 }
 nav ul {
     list-style-type: none;}
 header nav ul li a{
     display: block;
-    color: #fff;
+    color: var(--txt-color);
     text-align: center;
-    padding: 0.4rem;
     text-decoration: none;
     font-size: 1.3rem;
     border-bottom: 1px solid rgba(0,0,0,0.2);
@@ -59,25 +70,15 @@ header nav ul li a{
 header nav ul li a :nth-child(1){
     border-top: 1px solid rgba(0,0,0,0.2);
 }
-h1{
-    font-size: 1.3rem;
-    margin: 0rem;
-    font-family: 'Titillium Web', sans-serif;
-}
-header :nth-child(1) aside{
-    display: block;
-    text-align: end;
-    font-size: 0.6rem;
-    margin-right: 0.5rem;
-}
-header nav ul li a:hover{background-color: #4962a5;}
+
+header nav ul li a:hover{background-color: #2f4858;}
 header nav button{
 
     margin: .2rem 2vw;
     background: transparent;
     border: none;
     font-size: 2rem;
-    color: #fff;
+    color: #000;
 }
 
 #hamburgerBtn img{
@@ -86,17 +87,16 @@ header nav button{
     border-radius: 10px;
     padding: 0px 5px;
 }
-header nav ul li:nth-child(5) img{
-    max-height: 40px;
-    max-width: 40px;
+header nav ul li:nth-child(6) img{
+    max-height: 35px;
     border-radius: 10px;
 }
-header nav ul li:nth-child(5) {
+header nav ul li:nth-child(6) {
     display: flex;
     justify-content: end;
     align-content: center;
 }
-header nav ul li:nth-child(5) a{
+header nav ul li:nth-child(6) a{
     display: flex;
     text-align: center;
 }
@@ -109,400 +109,103 @@ header nav ul.open {display: block;}
 #hamburgerBtn.open button span:nth-child(2){display: block;}
 #hamburgerBtn.open a{display: none;}
 
-main section, main section section{
-    border: 1px solid rgba(0,0,0,0.2);
-    margin: 0.5rem;
-    min-height: 5rem;
 
-}
-/* .main-grid */
 
-.main-grid{
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    grid-template-areas:
-    "hero"
-    "event"
-    "weather"
-    "news-release"
-    "spotlights";
-}
+/* Main css */
 
-main section{
-    margin: 2px;
-    padding: 0px;
-    border: 0px;
-    background-color: rgba(73, 98, 165,0.3);
-    border-radius: 3px;
+.main-fields{
+    display: block;
+    /* flex-direction: row; */
+    border: none;
 }
-section> h3{
-    font-family: 'Titillium Web', sans-serif;
-    font-size: 1.2rem;
-    margin-top: 1rem;
-}
-section> p{
-    font-size: 0.9rem;
-    font-family:'Source Sans Pro', sans-serif ;
-}
-#hero{
-    grid-area: hero;
-    display: flex;
-    justify-content: center;
-    position: relative;
-    }
-#hero h2{
-    position: absolute;
-    margin-top: 1.5rem;
-}
-#hero img{
-    max-width: 100%;
-    /* max-height: 100%; */
-}
-#join{
+.main-form{
     position: relative;
 }
-.button-join{
+.main-form img{
+    width: 700px;
+}
+#form-make-reservation{
     position: absolute;
-    /* width: 7rem; */
-    height: 2rem;
-    font-weight: 900;
-    background-color: #fcca73;
-    border-radius: 0.8rem;
-    border: 1px solid;
-    box-shadow: 0px 0px 30px #333;
-    padding: 0 1.5rem ;
-    padding-top: .1rem;
-    text-decoration: none;
-}
-.button-join:visited{
-    color: #000;
-}
-#hero-sec-button{
-    bottom: 20px;
-    right: 10px;
-}
-
-#join p {
-    margin-top: 0.5rem;
-    padding: 1rem;
-}
-#join-sec-button{
-    bottom: 10px;
-    right: 10px;
-}
-
-
-#news-release p{
-    padding: 0.6rem;
-    margin-top: 0.1rem;
-}
-
-
-#news-release{grid-area: news-release;}
-#spotlights{grid-area: spotlights;}
-#join{display: none;}
-#join{grid-area: join;}
-#event{grid-area: event;}
-
-
-
-
-/************* WEATHER SECTION*********/
-#weather{grid-area: weather;}
-#weather img{
-    max-width: 4rem;
-    float: left;
-    margin-left: 1rem;
-}
-div#centered{
-    background-color: #fcca73;
-    display: flex;
-    align-items: center;
-    margin: 1rem 0 0 0 ;}
-div#centered h2{
-    margin-left: 2rem;}
-#cf{
+    top: 1rem;
     margin-left: 0.5rem;
-    font-size: 10px;
-    border-radius: 5px;
-    border: solid 1px #000;
-    padding: 2px 2px ;
-}
-
-#weather-desc {
-    font-weight: 600;
-    margin: 1rem;
-    padding-bottom: 0.4rem;
-    border-bottom: 2px solid #555;
-}
-#weather #weather-data div{
-    text-align: left;
-    margin: 0 0 0.4rem 3rem;
-}
-
-/*   footer */
-
-/*     join us form    */
-form fieldset{
-    margin: 2rem 0;
-    border: 1px solid #445ba9;
-    border-radius: 10px;
-    padding: .5rem 2%;
-}
-form legend{
-    color:#445ba9;
-    font-weight: 800;
-    margin-left: 1rem;
-    text-align: left;
-    padding: 0 .5rem;
-}
-label.lbl{
-    display:block;
-    padding-top: .8rem;
-    font-weight: 600;
-    text-align: left;
-}
-form label.lbl input, form label.lbl textarea{
     display: block;
-    font-size: 1rem;
-    border-radius: 4px;
-    border: 1px solid #999;
-    padding: .75rem;
-    width: 100%;
-    max-width: 20rem;
-    background-color: #fcca73;
+    /* flex-direction: row; */
 }
-form label.radio{
-    display: block;
-    padding: .75rem 0;
-    text-align: left;
-    font-weight: 600;
-}
-form label.lbl input:required {
-    border-left: solid 6px red;  
-}
-form label.lbl input:required:valid{
-    border-left: solid 6px green;  
-}
-form label.lbl-desc input{
-    padding: 3rem;
-}
-#form-join{
-    max-width: 29rem;
+.button-submit{
+    background-color: var(--primary-color);
+    color: #fef19a;
+    width: 8.5rem;
+    min-height: 2.5rem;
     margin: auto;
-    margin-bottom: 2rem;
-    align-items: center;
+    border-radius: 10px;
 }
-#sec-join{
-    min-height: 8rem;
-    margin-bottom: 4rem;
-}
-.button-join-join-pg{
-    margin: 3rem 0;
-    position:relative;
-    padding: 0 5% 0 5%;
-}
-
-.tks-sec{
-    margin-top: 1rem;
-    align-items: center;
-    padding: 5rem 0;
-}
-label.tks-join{
-    font-size: 40px;
-    margin-top: 2rem;
-    color: #4962a5;
-}
-/*                  */ 
-
-footer{
-    margin-top: 1rem;
-}
-.f-wrapper{
+.fields{
     display: block;
-    height: 14rem;
-    background-color: #7F889F;
-    border: 2px solid #4962a5;
-    border-radius: 5px 0px 0px 5px;
-    border-bottom: none;
+    /* flex-direction: column;
+    align-items: flex-start; */
+    margin-right: 1rem;
+    text-align: left;
+}
+.fields span{
+    font-size: .7rem;
+    color: rgba(255,255,255,0.8);
+}
+.fields .lbl input,.fields .select-lbl{
+    min-width: 9rem;
+    min-height: 2.5rem;
+    font-size: .9rem;
+    font-family: 'Source Sans Pro', 'sans-serif','currier';
+}
+.fields{
+    text-align: right;
+    margin-top: 0.2rem;
 }
 
-footer div.copyright{
-    background-color: #7F889F;
-    border: 2px solid #4962a5;
-    border-top:none;
-}
-.address{border-bottom: 2px solid #555;}
-div.address h2{
-    font-family: 'Titillium Web', sans-serif;
-    font-size: 1.5rem;
-}
-div.address p{
-    font-size: 0.8rem;}
 
-.f-logo, .contact, .address{width: 235px;margin: auto;}
 
-    div.contact{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-div.contact p{
-    font-size: 0.8rem;
-}
 
-.discover-holder{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 0.5rem;
-    gap: 1.3rem;
-}
-.discover-holder img[data-src] {
-    filter: blur(0.1em);
-}
-.discover-holder picture img{
-    border: 1px solid #000; 
-    filter: blur(0em); 
-    transition: filter 1.0s;
-}
-.discover-holder p{
-    width: 50rem;
-}
-.discover-holder .sep-holder{
+
+
+
+
+
+
+
+
+
+/* footer Css */
+
+.f-wrapper{
     display: flex;
     flex-direction: row;
-
+    background-color: var(--secondary-color);
+    border-radius: 5px;
+    margin: 1rem 0;
+    box-shadow: 0 2px 12px rgb(92, 88, 88);
 }
-.discover-holder .sep1, .discover-holder .sep3{
-    width: 100px;
-    height: 5px;
-    background-color: rgb(252, 202, 115);
-
-}
-.discover-holder .sep1{
-    border-radius: 2px 0px 0px 2px;
-    margin-right: 5px;
-}
-
-.discover-holder .sep2{
-    width: 5px;
-    height: 5px;
-    background-color: rgb(73, 98, 165) ;
-    border-radius: 2px;
-    margin-right: 5px;
-}
-.discover-holder .sep3{
-    border-radius: 0px 2px 2px 0px;}
-
-.discover-holder {
-    padding: 1rem 0rem;
-}
-.discover-holder aside{
-    font-size: 20px;
-    font-weight: bold;
-}
-
-
-
-/*************  Directory  ***********/
-
-.grid-table-switcher{
-    margin-top: 1rem;
-}
-.grid-table-switcher button{
-    border: none;
-    width: 34px;
-    height: 34px;
-}
-.grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit,  minmax(295px, 1fr));
-}
-
-.grid section {
-    margin: 0.25rem;
-    padding: 0.35rem;
-    background-color: #eee;
-    border: 1px solid #212480;
-    border-radius: 3px;
-    box-shadow: 2px 3px 5px rgba(0,0,0,.5);
-}
-.grid section > p {
-    min-height: 10px;
-    margin: 0;
-    font-family:'Source Sans Pro', sans-serif ;
-}
-.grid section div{
+.f-logo{
     display: flex;
-    /* width:fit-content; */
+    justify-content: center;
+    align-items: center;
+    min-width: 25%;
 }
-.grid section div h3{
+.address{
+    min-width: 50%;
+}
+.contact{
+    min-width: 25%;
+    padding-top: 1rem;
+    font-size: .8rem;
+}
+.f-wrapper img{
+    max-height: 30px;
+}
+.copyright p{
+    background-color: var(--txt-color);
+    width: 50%;
     margin: auto;
+    border-radius: 10px;
 }
-.grid img {
-    margin: 0.8rem ;
-    max-width: 380px;
-    box-shadow: 0 0 30px #777;
-    height: 100px;
-    border: 1px solid #333;
-}
-.list {
-	display: flex;
-	flex-direction: column;
-}
-.list section {
-	display: flex;
-	flex-direction: column;
-	justify-content: left;
-  
-}
-.list section > * {
-	text-align: left;
-}
-.list section img {
-	display: none; /* smaller viewports only */
-}
-.list section:nth-child(odd){
-    background-color: #ccc;
-}
-
-#contact{
-    display: flex;
-    flex-direction: column;
-    margin-top: 1rem;
-}
-
-#contact-form{
-    flex: 2;
-    max-width: 100%;
-    /* background-color: #00ff2a; */
-    margin-right: 0.2rem;
-}
-#contact-form h2{
-    margin: 5% 0 5% 5%; 
-
-}
-#contact-us{
-    min-width: 100%;
-    border-top: solid 2px rgb(73, 98, 165);
-    text-align: left;
-    padding-bottom: 2rem;
-}
-#contact-us p{
-    margin-left: 15%;
-}
-#contact-us h2{
-    margin: 5% 0 5% 5%; 
-
-}
-
-#contact-us h3{
-    margin-left: 10%;
-}
-
-
-
 
 
 
