--- a/Final Project/css/large.css
+++ b/Final Project/css/large.css
@@ -25,7 +25,57 @@
         display: flex;
         flex-direction: row;
     }
-    .main-form img{
+    .main-form picture img{
         width: 100%;
     }
+
+    .temple-info :nth-child(4){
+        flex: none;
+    }
+    .temple-info{        visibility: hidden;}
+    .temple-info img{
+        display:block;
+        margin: 1rem 0 0 2rem;
+        height: 100px;
+        border: 5px solid white;
+    }
+    .amenities, #adds-top,#five-days-weather{
+        display: flex;
+        flex-direction: row;
+
+    }
+    .amenities div {
+        width: 50%;}
+    .amenities ul{
+        font-size: 13px;
+        margin-left: 2rem;
+    }
+    .mid-area{
+        display: flex;
+        flex-direction: row;
+        margin-top: 2rem;
+
+    }
+    #adds, #weather  {width: 50%;}
+    #adds-top div, #adds-bottom {
+        width: 50%;
+        background-color:#ffffff;
+        border: 10px solid #bbe6e4;
+    }
+    #adds-bottom{
+        margin-left: 25%;
+    } 
+
+    .weather-day, #five-days-weather :nth-child(3){
+        width: 20%;
+        border-right: 1px solid #000;
+    }
+    #five-days-weather :nth-child(5){
+        border-right: none ;
+    }
+    .weather-day h4{
+        margin: 0;
+    }
+
+
 }
