--- a/Final Project/css/medium.css
+++ b/Final Project/css/medium.css
@@ -41,6 +41,32 @@
         align-items: flex-start;
         margin-right: 1rem;
     }
+
+
+    .temple-info h3, .temple-info p{
+        color: var(--secondary-color);
+    }
+
+    .temple-info{
+        position: absolute;
+        top: 10rem;
+        margin-left: 2rem;
+    }
+
+    .amenities ul{
+        font-size: 12px;
+    }
+
+
+
+
+
+
+
+
+
+
+
 }       
 
 
@@ -53,7 +79,11 @@
     .sub-main-fields{
         display: flex;
     }
-    .main-form img{
-        max-width: 100%;
+
+    .temple-info {
+        top: 6rem;
     }
+
+
+
 }
