--- a/Final Project/css/small.css
+++ b/Final Project/css/small.css
@@ -58,7 +58,8 @@ nav {
     width: 100%;
 }
 nav ul {
-    list-style-type: none;}
+    list-style-type: none;
+}
 header nav ul li a{
     display: block;
     color: var(--txt-color);
@@ -121,7 +122,7 @@ header nav ul.open {display: block;}
 .main-form{
     position: relative;
 }
-.main-form img{
+.main-form picture img{
     width: 700px;
 }
 #form-make-reservation{
@@ -168,17 +169,86 @@ header nav ul.open {display: block;}
     margin-top: 0.2rem;
 }
 
+
+.temple-info h3, .temple-info p{
+    color: #000;
+}
 .temple-info{
-    position: absolute;
-    top: 6rem;
-    margin-left: 5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-left: 4px;
+}
+.temple-info p{margin-left: 10px;}
+.temple-info img{
+    display: none;
 }
 
-.temple-info img{
-    margin: 0;
-    height: 200px;
-    border: 5px solid white;
+
+.amenities{
+    display: block;
+    font-size: 10px;
+    margin-left: 25px;
+    text-align: left;
 }
+.amenities ul{margin-top: 1rem;}
+.amenities ul li{
+    text-decoration:dotted;
+}
+.mid-area{
+    display: block;
+    margin-top: 1rem;
+}
+
+
+
+#weather{
+    width: 100%;
+    background-color: aqua;
+    padding-top: 1rem;
+}
+#five-days-weather{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-top: 1rem;
+    align-items: stretch;
+}
+.weather-day {
+    width: 33%;
+    border-right: 1px solid #000;
+}
+#five-days-weather :nth-child(3){
+    border-right: none ;
+}
+.weather-day p{
+    margin-top: 0.6rem;
+    font-size: 10px;
+}
+
+.weather-day h5{
+    padding-bottom: .5rem;
+}
+
+
+
+
+
+
+#adds-top div, #adds-bottom {
+    width: 100%;
+    background-color:#ffffff;
+    border: 10px solid #bbe6e4;
+}
+
+
+
+
+
+
+
+
+
 
 
 
